--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -114,7 +114,7 @@ html {
   text-size-adjust: 100%;
 }
 body{
-  background-color: #efe1e1;
+  background-color: #faf9f6;
   height: 100%;
 }
 
@@ -129,8 +129,7 @@ body{
 /* footer */
 .cont-footer{
 position: fixed;
-background:brown
-;
+background:brown;
 bottom: 0;
 left: 0;
 margin-top: 50px;
@@ -150,7 +149,7 @@ margin-top: 50px;
   margin-left: 25%;
   margin-top: 1%;
   margin-bottom: 1%;
-  color:#cccccc
+  color:#ffffff
 }
 #refbut-nav{
 
@@ -201,6 +200,9 @@ nav .content .links{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: clamp(2px,9vw,16px);
 }
+.content.logo a:hover{
+  color: bisque;
+}
 .logo img{
   display: none;
 }
@@ -228,7 +230,7 @@ nav .content .links{
 }
 .wrapper .search-icon,
 .wrapper .menu-icon{
-  color: #fff;
+  color: #ffffff;
   font-size: 18px;
   cursor: pointer;
   line-height: 70px;
@@ -246,7 +248,7 @@ line-height: 25px;
 #icon-s{
   font-size: clamp(24px,3vw,37px);
  margin-right:60%;
- padding-bottom: 40px;
+ padding-bottom: 5px;
 
 }
 .wrapper .search-box{
@@ -269,14 +271,14 @@ line-height: 25px;
  
   outline: none;
   font-size: clamp(20px,4vw,28px);
-  color: #efe1e1;
+  color: #fefefe;
   font-weight: 700;
-  background:rgb(23, 22, 22);
+  background:black;
   padding: 0 100px 0 15px;
   border-radius: 20px;
 }
 .search-box input::placeholder{
-  color:whitesmoke;
+  color:rgb(246, 244, 244);
   font-size: clamp(17px,3vw,30px)
  
 }
@@ -350,7 +352,9 @@ line-height: 25px;
 /* search Responsive code start */
 @media screen and (max-width: 1250px){
  
-
+#icon-s{
+  padding-bottom: 40px;
+}
   .content.logo a{
     padding-bottom: 20px;
   }
