--- a/static/css/for_forms.css
+++ b/static/css/for_forms.css
@@ -162,7 +162,7 @@ html {
 .contact-form .btnContact {
     width: 50%;
     border: none;
-    font-size: clamp(20px,1vw,30px);
+    font-size: clamp(12px,2vw,30px);
     border-radius: 1rem;
     padding: 1.5%;
     background:linear-gradient(340deg, rgba(0,0,255,.8), rgba(0,0,255,0));
@@ -172,7 +172,7 @@ html {
     margin-bottom: 15px;
 }
 label{
-    color: lightcoral;
+    color: navajowhite;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 1px;
