--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post.jpg') }}')">
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/profile.webp') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
        
