--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,9 @@
    
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.5, shrink-to-fit=no">
-  <meta name="description" content="A platform to freely share your views , your thinking, your ideas
-     and communicate to various communities.A world for the people who are in search for a better place than the diluted world. ">
-  <meta name="author" content="A human who has found the truth.">
+  <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
   <title>Vriddhi</title>
 
   <!-- Bootstrap core CSS -->
@@ -31,9 +30,10 @@
           <div class="page-heading">
             <h1>VR_iddH!</h1></div>
             <div class="subheading">
-            If you  came here it may be because of your 
-            <span>curiosity</span>,or you are a <span>individual</span>
-            and you know the <span>truth</span> but if  you are not, in some time you will be one.
+           
+            <span>अपारम् तव अपरिमितम् प्राप्यताम्।</span>
+           This means you can reach your limitless limit 
+           and this is the perfect place to do that.
           </br>
            
          
