--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #4e4c4c;
+            background-color: #8c8a8a;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -19,7 +19,7 @@
             width: 80%;
             max-width: 600px;
             padding: 20px;
-            border: 1px solid #bad90b;
+            border: 1px solid #cfc015;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             background-color: #fff;
@@ -29,7 +29,7 @@
         .add-post-header {
             font-size: 24px;
             margin-bottom: 20px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif
         }
 
         .form-group {
@@ -47,10 +47,12 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            font-weight: 600;
         }
 
         textarea {
             resize: vertical;
+          
         }
         .contact-image img{
     border-radius: 6rem;
@@ -61,17 +63,18 @@
 }
 
         .add-post-button {
-            background:linear-gradient(120deg,rgb(17, 17, 17),rgb(13, 213, 240));
+            background:linear-gradient(120deg,rgb(0, 0, 0),rgb(144, 32, 32));
             color: #fff;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
             font-size: 16px;
+            font-weight: 600;
             cursor: pointer;
         }
 
         .add-post-button:hover {
-            background-color: #0056b3;
+            background:linear-gradient(120deg,rgb(0, 0, 0),rgb(144, 32, 32));
         }
     </style>
 </head>
