--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
    
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=0.6, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Vriddhi</title>
@@ -31,12 +31,11 @@
             <h1>VR_iddH!</h1></div>
             <div class="subheading">
            
-            <span>अपारम् तव अपरिमितम् प्राप्यताम्।</span>
-           This means you can reach your limitless limit 
-           and this is the perfect place to do that.
+            <span>Explore </span>
+         the new world of <span>infinite </span>possibilities with the people
+         you know and with those you will know later.
           </br>
-           
-         
+          
           <a class="btn btn-info"id='intro_but' href="/signin" role="button">Signin</a>
         
       <a class="btn btn-info" id="intro_but"href="/new_account" role="button">Create_account</a>
