--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -121,7 +121,7 @@ h3{
    
    border-radius: 3px;
 
-  background:#FAF9F6;
+  background:#fffefb;
 
 overflow-wrap: break-word;
 height: max-content;
