--- a/static/css/for_account.css
+++ b/static/css/for_account.css
@@ -198,14 +198,15 @@ h1{
     padding: 0.8%;
     
     text-decoration: none;
-   border-radius: 5px;
+   border-radius: 12px;
  float: right;
 
-    background:bisque;
- border: 1px solid black;
-  color: #534545;
+ background: bottom;
+ border: 4px solid black;
+  color: #000000;
   cursor: pointer;
   margin-bottom: 0px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 @media (max-width:1350px){
