--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
     <div class="control-group">
       <div class="form-group floating-label-form-group controls">
       
-        <textarea rows="4" class="form-control" name = "descrip" id="descrip"style="font-size:clamp(17px,3vw,28px);font-family:cursive" >
+        <textarea rows="4" class="form-control" name = "descrip" id="descrip"style="font-size:clamp(14px,3vw,28px);font-family:cursive;border:2px solid black" >
           {{user.description}}</textarea>
        
       </div>
@@ -59,8 +59,9 @@
   </div>
     
   </div>
-  <hr>
-  <hr>
+<br>
+<br>
+<br>
   <div class="container-post-profile">
     <h2> Intellects</h2>
       
@@ -82,7 +83,7 @@
             <p class="post-meta-2">➔ Thinking of you
             
               on {{post_of_user.date}}</p>
-          <div class="content-2" >{{post_of_user.content[0:200]}}...</div>
+          <div class="content-2" >{{post_of_user.content[0:100]}}...</div>
         </br> 
       
         <div class="buttons" >
@@ -106,7 +107,7 @@
      
   </body>
   <br>
-  <br>
-
+ 
+ 
 {% endblock %}
     
