--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no,maximum-scale=0.75">
-    <meta name="description" content="">
+    <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
+    A new world of communication is now open.">
     <meta name="author" content="">
+    <link rel="icon" href="static/img/vriddhi_logo.png">
     <title>Vriddhi</title>
   
     <!-- Custom fonts for this template -->
@@ -45,7 +47,7 @@
           <div class="content">
           <div class="logo">
             <a >Vriddhi</a>
-            <img  src="{{url_for('static', filename='img/vriddhi_logo.png')}}" alt="" width="57" height="57" padding-bottom="12px">
+            <img  src="{{url_for('static', filename='img/vriddhi_logo.png')}}" alt="" width="54" height="54" padding-bottom="30px">
           </div>
             <ul class="links">
               
@@ -57,7 +59,7 @@
                 <label for="show-features">Features</label>
                 <ul>
                   <li><a href="https://google.com" target="_blank">Search Google</a></li>
-                  <li><a href="#">Something more to add</a></li>
+                  <li><a href="#">Something more</a></li>
                 
                 </ul>
               </li>
