--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="static/img/vriddhi_logo.png">
 
     <title>Start Your Journey</title>
     
