--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"description="#add a post , #create something,#free platform to freely share">
     <title>Add Post</title>
+    <link rel="icon" href="static/img/vriddhi_logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #8c8a8a;
+            background-color: rgb(0, 0, 0);
             display: flex;
             justify-content: center;
             align-items: center;
