--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.6, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
+  A new world of communication is now open.">
+  <link rel="icon" href="static/img/vriddhi_logo.png">
   <meta name="author" content="">
   <title>Vriddhi</title>
 
