--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/profile.webp') }}')">
+    <link rel="icon" href="static/img/vriddhi_logo.png">
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post.jpg') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
        
