--- a/templates/edit.html
+++ b/templates/edit.html
@@ -86,7 +86,7 @@
             <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
         </div>
         <form method="post"action="/individual_post/edit/{{post.sno}}">
-        <h1 class="add-post-header">Unleash your thinking</h1>
+        <h1 class="add-post-header">Make changes</h1>
         <form>
             <div class="form-group">
                 <label for="title">Title:</label>
