--- a/templates/user_account.html
+++ b/templates/user_account.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-
+<link rel="icon" href="static/img/vriddhi_logo.png">
    
 <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/profile.webp') }}')">
   <div class="overlay"></div>
@@ -46,6 +46,8 @@
   </div>
     
   </div>
+ <br>
+ <br>
  <br>
   <div class="container-post-profile">
     <h2> Intellects</h2>
