--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -244,7 +244,7 @@ overflow-wrap: break-word;
   margin-bottom: 20px;
   margin-left: 15px;
   margin-right: 15px;
-  font-size: clamp(24px,2vw,35px);
+  font-size: clamp(16px,2vw,35px);
   opacity: 10px;
  
   font-family: Saira;
@@ -255,13 +255,13 @@ letter-spacing: 1px;
 }
 .user-discuss{
   margin-left: 40%;
-  font-size: clamp(16px,2vw,27px);
+  font-size: clamp(10px,2vw,25px);
 
   text-align: end;
   margin-top: 3%;
   margin-bottom: 10rem;
   color:#000000;
-  font-family: Lilita One;
+  font-family:Tahoma, sans-serif;
 }
 
 @media (min-width:480px){
