--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no,maximum-scale=0.75">
+    <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT">
     <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
     A new world of communication is now open.">
     <meta name="author" content="">
