--- a/templates/layout.html
+++ b/templates/layout.html
@@ -71,7 +71,15 @@
               </li>
               <li><a href="/community">IN_dividuals</a></li>
               <li id="logout"><a href="/logout">Logout</a></li>
-         
+         <br>
+              <div class="cube">
+                <div class="face front"></div>
+                <div class="face back"></div>
+                <div class="face right"></div>
+                <div class="face left"></div>
+                <div class="face top"></div>
+                <div class="face bottom"></div>
+            </div>
             </ul> 
           </div>
           <label for="show-search"  class="search-icon"><i class="fas fa-search" id="icon-s"></i></label>
