--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no,maximum-scale=0.75">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
     <meta http-equiv="expires" content="Tue, 01 Jan 2025 12:00:00 GMT">
     <meta name="description" content="a platform to share communicate your ideas. Join live chat and share your opinions.
     A new world of communication is now open.">
@@ -71,7 +71,8 @@
               </li>
               <li><a href="/community">IN_dividuals</a></li>
               <li id="logout"><a href="/logout">Logout</a></li>
-         <br>
+              <br>
+              
               <div class="cube">
                 <div class="face front"></div>
                 <div class="face back"></div>
