--- a/templates/user_account.html
+++ b/templates/user_account.html
@@ -38,9 +38,8 @@
     
     </div>
 
-  </br>
   <br>
-  <br>
+ <br>
   <div class="badge bg-dark text-wrap" id="uid">
     SPI : {{user.id}}
   </div>
@@ -51,7 +50,8 @@
  <br>
   <div class="container-post-profile">
     <h2> Intellects</h2>
-    </br>
+    
+   </div>
     {% if posts_of_user %}
         {% for post_of_user in posts_of_user %}
         <div class="container-2">
