--- a/static/css/for_account.css
+++ b/static/css/for_account.css
@@ -70,7 +70,7 @@ header.masthead .site-heading
 .container-post-profile{
    margin-right: 10%;
    margin-left: 13%;
-   margin-bottom: 70px;
+   margin-bottom: 10px;
    width:72%;
   
 }
@@ -116,7 +116,9 @@ h1{
     max-width:100%;
  box-shadow: 5px 5px 5px black;
    
- margin-bottom: 6%;
+ margin-bottom: 2%;
+margin-right: 10%;
+margin-left: 10%;
    
   }
   .post-title-2{
@@ -196,10 +198,10 @@ h1{
     font-size: clamp(18px,3vw,40px);
     font-weight: 500;
     margin-bottom: 8px;
-    padding: 0.8%;
+    padding: 1.5%;
     
     text-decoration: none;
-   border-radius: 4px;
+   border-radius: 8px;
  float: right;
 
  background: bottom;
@@ -220,6 +222,10 @@ margin-right: 9%;
     margin-left: 9%;
   
     width: 80%;
+  }
+  .container-2{
+    margin-right: 0%;
+    margin-left: 0%;
   }
 
 .post-title-2{
