--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -166,7 +166,7 @@ float:right;
 
 }
 .wrapper{
-  background: linear-gradient(110.6deg, rgb(46, 49, 49) 40.9%, rgba(110,123,251,1) 91.1%);
+  background: linear-gradient(110.6deg, rgb(46, 49, 49) 20.9%, rgba(110,123,251,1) 91.1%);
   position: fixed;
   width: 100%;
   height: clamp(50px,6vw,80px);
@@ -359,7 +359,8 @@ line-height: 25px;
     transform-style: preserve-3d; /* Preserve 3D transformations */
     animation: rotateCube 4s linear infinite;
    margin-left: 25%;
-   display: block
+   display: block;
+   margin-top:10%;
    
   }
   
@@ -501,8 +502,9 @@ width:clamp(280px,2vw,350px);
   .content .links li a,
   .content .links li label{
     line-height: 24px;
-   font-size: clamp(24px,5vw,28px);
+   font-size: clamp(22px,1vw,28px);
     display: block;
+    font-family: Tahoma, sans-serif;
     padding: 8px 18px;
     cursor: pointer;
   }
