--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"description="#add a post , #create something,#free platform to freely share">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9"description="#add a post , #create something,#free platform to freely share">
     <title>Add Post</title>
     <link rel="icon" href="static/img/vriddhi_logo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: rgb(0, 0, 0);
+            background:linear-gradient(120deg,#000000,rgb(211, 32, 32));
             display: flex;
             justify-content: center;
             align-items: center;
