--- a/templates/edit.html
+++ b/templates/edit.html
@@ -101,7 +101,7 @@
                 <textarea id="content" name="content" rows="6" placeholder="Your content here" required>{{post.content}}</textarea>
             </div>
             <div class="form-group">
-                <button type="submit" class="add-post-button">Add Post</button>
+                <button type="submit" class="add-post-button">Edit</button>
             </div>
         </form>
     </div>
