--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -3,11 +3,12 @@
 
     <!-- Page Header -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <meta name="description" content="{{post.title}}">
     <link rel="icon" href="static/img/vriddhi_logo.png">
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/Post.jpg') }}')">
+    <meta name="author" content="">
+   
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post.jpg') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
        
