--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -247,11 +247,12 @@ overflow-wrap: break-word;
   font-size: clamp(16px,2vw,35px);
   opacity: 10px;
  
-  font-family: Saira;
+overflow-wrap: break-word;
+  font-family: Georgia, Times, 'Times New Roman', serif;
 
 letter-spacing: 1px;
   font-weight: 800;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 .user-discuss{
   margin-left: 40%;
