--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="static/img/vriddhi_logo.png">
     <meta name="author" content="">
    
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post.jpg') }}')">
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/Post.jpg') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
        
