--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background:linear-gradient(120deg,#000000,rgb(211, 32, 32));
+            background:linear-gradient(120deg,#000000 40%,rgb(211, 32, 32));
             display: flex;
             justify-content: center;
             align-items: center;
@@ -45,14 +45,18 @@
         input[type="text"],
         textarea {
             width: 96%;
-            padding: 10px;
+            padding: 2%;
             border: 1px solid #ccc;
             border-radius: 5px;
             font-weight: 600;
+            font-size: 16px;
+        line-height: 1.2;
+        letter-spacing: 0.6%;
         }
 
         textarea {
             resize: vertical;
+        
           
         }
         .contact-image img{
@@ -64,7 +68,7 @@
 }
 
         .add-post-button {
-            background:linear-gradient(120deg,rgb(0, 0, 0),rgb(144, 32, 32));
+            background:linear-gradient(120deg,rgb(0, 0, 0) 40%,rgb(144, 32, 32));
             color: #fff;
             border: none;
             border-radius: 5px;
