--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
     <div class="control-group">
       <div class="form-group floating-label-form-group controls">
       
-        <textarea rows="4" class="form-control" name = "descrip" id="descrip"style="font-size:clamp(14px,3vw,28px);font-family:cursive;border:2px solid black" >
+        <textarea rows="4" class="form-control" name = "descrip" id="descrip"style="font-size:clamp(18px,3vw,28px);border:2px solid black" >
           {{user.description}}</textarea>
        
       </div>
@@ -77,8 +77,7 @@
           
        
                       </div>
-    <br>
-    
+                      <br>
     
     {% if posts_of_user %}
         {% for post_of_user in posts_of_user %}
@@ -106,7 +105,6 @@
         {% endfor %}
         {% else %}
         <h3>NO thinking yet</h3>
-    
         {% endif %}
 
 
@@ -114,8 +112,8 @@
      
   </body>
   <br>
-<br>
-<br>
+  <br>
+  <br>
  
  
 {% endblock %}
